--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -8,7 +8,7 @@
   top: 0;
   z-index: 4;
   width: 100%;
-  min-height: 100vh;
+  /* min-height: 100vh; */
 }
 
 .line-link {
@@ -18,28 +18,6 @@
   position: relative;
   display: inline-block;
   cursor: pointer;
-}
-
-.line-link:hover,
-.line-link:focus {
-  color: var(--color-link-menu);
-}
-
-.line-link::before {
-  content: "";
-  height: 1px;
-  width: 100%;
-  background: currentColor;
-  position: absolute;
-  top: 92%;
-  transition: transform 0.3s;
-  transform-origin: 0% 50%;
-  transform: scaleX(0);
-}
-
-.line-link:hover::before {
-  transform: scaleX(1);
-  transform-origin: 100% 50%;
 }
 
 .cover {
@@ -58,4 +36,10 @@
   height: 40px;
   margin: 5px 0;
   padding: 5px;
+}
+
+@media screen and (min-width: 768px) {
+  .swiper-wrapper {
+    justify-content: center;
+  }
 }
